# keturah

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
okf/: index.md
okf/concepts/: capability-manifest.md  index.md
src/keturah/: __init__.py  manifest.py  mcp.py  registry.py
tests/: test_manifest.py  test_mcp.py  test_registry.py
