[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keturah"
version = "0.1.0"
description = "Keturah — a uniform, MCP-bridgeable manifest of a product's LLM-consumable interfaces."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "gellsmore-svg"}]
keywords = ["llm", "mcp", "tools", "interface", "manifest", "capabilities", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
# Dependency-free: the manifest shape is pure stdlib so any product can adopt it.
dependencies = []

[project.urls]
Homepage = "https://github.com/gellsmore-svg/keturah"
Repository = "https://github.com/gellsmore-svg/keturah"
Issues = "https://github.com/gellsmore-svg/keturah/issues"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
keturah = ["py.typed"]
